--- a/style.css
+++ b/style.css
@@ -1,54 +1,21 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
-  width: 500px;
-  margin: 0 auto;
-  display: block;
-  text-align: right;
-}
-.aaa img {
-  width: 100%;
-}
-.aaa .more_inf {
-  font-family: fantasy, cursive;
-}
-@media (max-width:768px) {
-
-  .aaa {
-    text-align: center;
-  }
-
-}
-.centered-main-page-element {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
-}
-.task-row-wrapper {
-    display: flex;
-}
-ul {
+.task-list {
   margin: 0;
   padding: 0px;
 }
-li,
-h3 {
+.task-list .task-item {
   list-style: none;
 }
-input,
-button{
+.task-item__input,
+.task__item-btn {
   outline: none;
 }
-button {
+.task__item-btn {
   background: none;
   border: 0px;
   color: #888;
@@ -57,13 +24,34 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.task__item-btn:hover {
   color: #3a3A3a;
 }
+.header {
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
+}
+.header__image {
+  width: 100%;
+}
+.header__link {
+  font-family: fantasy, cursive;
+}
+@media (max-width:768px) {
 
-/* Heading */
-h3,
-label[for="new-task"] {
+  .header {
+    text-align: center;
+  }
+
+}
+.main {
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
+}
+.section__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -72,7 +60,25 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.section__title--create {
+  margin-bottom: 20px;
+}
+
+/* Heading */
+.task-item {
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.task-item__title {
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
+}
+.task-item__input {
+  width: 226px;
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -84,66 +90,47 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.task-item__input:focus {
   color: #333;
 }
 
-/* New Task */
-label[for="new-task"] {
-  display: block;
-  margin: 0 0 20px;
-}
-input#new-task {
-  width: 318px;
-}
-
 /* Task list */
-li {
-  overflow: hidden;
-  padding: 20px 0;
+.task-list__item{
   border-bottom: 1px solid #eee;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  padding: 20px 0;
 }
-li > * {
-  vertical-align: middle;
-}
-li > input[type="checkbox"] {
+.task-item__checkbox {
   margin: 0 10px;
 }
-li > label {
-  padding-left: 10px;
-  box-sizing: border-box;
-  font-size: 18px;
-  width: 226px;
+.task-item__title,
+.task-item__input{
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;  
 }
-li > input[type="text"] {
-  width: 226px
-}
-button.delete img {
+.btn-delete__icon {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.btn-delete__icon:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-tasks .task-item__title {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-list .task-item__input {
   display: none;
 }
-ul li.editMode input[type=text] {
+.task-item--edit .task-item__input {
   display: inline-block;
   width: 224px;
 }
-ul li.editMode label {
+.task-item--edit .task-item__title {
   display: none;
 }
